--- a/array_dimension.ipynb
+++ b/array_dimension.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "36846d2d",
    "metadata": {},
    "outputs": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "2c216437",
    "metadata": {},
    "outputs": [
@@ -35,7 +35,33 @@
    "source": [
     "import numpy as np\n",
     "num_array = np.array([1, 2, 3, 4, 5])\n",
-    "print(num_array)"
+    "print(num_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d3e6b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 0 0 0]\n",
+      " [0 0 0 0]\n",
+      " [0 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create an array of zeros\n",
+    "zero_array = np.zeros(\n",
+    "    shape=(3, 4),  # shape of the array (3 rows, 4 columns)\n",
+    "    dtype=np.int32,  # data type of the array elements (32-bit integer)\n",
+    "    order='C'  # memory layout order (C-style row-major order)\n",
+    ")\n",
+    "print(zero_array)"
    ]
   }
  ],
