--- a/array_slicing.ipynb
+++ b/array_slicing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "beb2aba5",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "223f3f3e",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "3db08069",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
        "       [0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,10 +105,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "8bdbfe63",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10],\n",
+       "       [10, 10, 10, 10, 10]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fixed = np.full(\n",
     "    shape= (5,5),\n",
