--- a/array_slicing.ipynb
+++ b/array_slicing.ipynb
@@ -157,6 +157,58 @@
     "id_matrix  = np.eye( 4)\n",
     "id_matrix"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "abf04308",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 3, 5, 7, 9])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seqnce = np.arange( 1, 10, 2)\n",
+    "seqnce"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "9a1f6218",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  3.66666667,  7.33333333, 11.        ])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "license = np.linspace(\n",
+    "    start= 0,\n",
+    "    stop= 11,\n",
+    "    num= 4,\n",
+    "    \n",
+    "\n",
+    "\n",
+    ")\n",
+    "license\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
