--- a/array_slicing.ipynb
+++ b/array_slicing.ipynb
@@ -209,6 +209,32 @@
     "license\n",
     "    \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "04dc8677",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 6]\n",
+      " [5 7]\n",
+      " [6 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "slc_array = np.array(\n",
+    "   [[2,3,4,5],\n",
+    "    [3,4,6,8],\n",
+    "    [4,5,7,9],\n",
+    "    [5,6,8,10]]\n",
+    ")\n",
+    "print(slc_array[1:4,1:3 ])"
+   ]
   }
  ],
  "metadata": {
