--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -70,6 +70,30 @@
     "reverser_sort_array = reverser_array[::-1]\n",
     "print(reverser_sort_array)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "080d71ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "agg = np.argmax([3,4,2,3,4,5,6,8,2]\n",
+    ")\n",
+    "print(agg)\n",
+    "agg = np.argmin([3,4,0,3,4,5,-6,8,2]\n",
+    ")\n",
+    "print(agg)\n"
+   ]
   }
  ],
  "metadata": {
