--- a/sorting.ipynb
+++ b/sorting.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "080d71ff",
    "metadata": {},
    "outputs": [
@@ -93,6 +93,28 @@
     "agg = np.argmin([3,4,0,3,4,5,-6,8,2]\n",
     ")\n",
     "print(agg)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a5e4d907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([3, 4, 0]), array([3, 4, 5]), array([-6,  8,  2])]\n",
+      "[3 4 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "split = np.array([3,4,0,3,4,5,-6,8,2])      \n",
+    "split = np.split(split, 3)\n",
+    "print(split)    \n",
+    "print(split[0])"
    ]
   }
  ],
